--- a/WebContent/css/reports-customstyle.css
+++ b/WebContent/css/reports-customstyle.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Varela Round', sans-serif;
-    background-image: url("/images/Black-Galaxy-Wallpapers-HD.jpg");
+    background-image: url('../images/Black_Galaxy_Wallpapers_HD.jpg');
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
@@ -58,3 +58,20 @@ body {
     background-color: #495057;
     padding-left: 8px;
 }
+
+.carousel-indicators li {
+	background-color: black;
+}
+
+.carousel-indicators .active {
+	color: yellow;
+	background-color: cyan;
+}
+
+.clickable-row{
+cursor:pointer;
+}
+
+.error {color:#5a5c69;font-size:7rem;position:relative;line-height:1;width:12.5rem}@-webkit-keyframes noise-anim{0%{clip:rect(89px,9999px,5px,0)}5%{clip:rect(92px,9999px,71px,0)}10%{clip:rect(63px,9999px,67px,0)}15%{clip:rect(85px,9999px,47px,0)}20%{clip:rect(76px,9999px,50px,0)}25%{clip:rect(99px,9999px,10px,0)}30%{clip:rect(76px,9999px,83px,0)}35%{clip:rect(5px,9999px,45px,0)}40%{clip:rect(3px,9999px,11px,0)}45%{clip:rect(1px,9999px,87px,0)}50%{clip:rect(56px,9999px,79px,0)}55%{clip:rect(12px,9999px,54px,0)}60%{clip:rect(38px,9999px,21px,0)}65%{clip:rect(5px,9999px,15px,0)}70%{clip:rect(20px,9999px,75px,0)}75%{clip:rect(14px,9999px,33px,0)}80%{clip:rect(70px,9999px,79px,0)}85%{clip:rect(68px,9999px,78px,0)}90%{clip:rect(96px,9999px,69px,0)}95%{clip:rect(16px,9999px,95px,0)}100%{clip:rect(96px,9999px,60px,0)}}@keyframes noise-anim{0%{clip:rect(89px,9999px,5px,0)}5%{clip:rect(92px,9999px,71px,0)}10%{clip:rect(63px,9999px,67px,0)}15%{clip:rect(85px,9999px,47px,0)}20%{clip:rect(76px,9999px,50px,0)}25%{clip:rect(99px,9999px,10px,0)}30%{clip:rect(76px,9999px,83px,0)}35%{clip:rect(5px,9999px,45px,0)}40%{clip:rect(3px,9999px,11px,0)}45%{clip:rect(1px,9999px,87px,0)}50%{clip:rect(56px,9999px,79px,0)}55%{clip:rect(12px,9999px,54px,0)}60%{clip:rect(38px,9999px,21px,0)}65%{clip:rect(5px,9999px,15px,0)}70%{clip:rect(20px,9999px,75px,0)}75%{clip:rect(14px,9999px,33px,0)}80%{clip:rect(70px,9999px,79px,0)}85%{clip:rect(68px,9999px,78px,0)}90%{clip:rect(96px,9999px,69px,0)}95%{clip:rect(16px,9999px,95px,0)}100%{clip:rect(96px,9999px,60px,0)}}
+.error:after{content:attr(data-text);position:absolute;left:2px;text-shadow:-1px 0 #e74a3b;top:0;color:#5a5c69;background:#f8f9fc;overflow:hidden;clip:rect(0,900px,0,0);animation:noise-anim 2s infinite linear alternate-reverse}@-webkit-keyframes noise-anim-2{0%{clip:rect(50px,9999px,32px,0)}5%{clip:rect(32px,9999px,76px,0)}10%{clip:rect(28px,9999px,55px,0)}15%{clip:rect(64px,9999px,11px,0)}20%{clip:rect(23px,9999px,53px,0)}25%{clip:rect(69px,9999px,48px,0)}30%{clip:rect(84px,9999px,66px,0)}35%{clip:rect(66px,9999px,70px,0)}40%{clip:rect(21px,9999px,86px,0)}45%{clip:rect(70px,9999px,85px,0)}50%{clip:rect(40px,9999px,4px,0)}55%{clip:rect(62px,9999px,47px,0)}60%{clip:rect(17px,9999px,97px,0)}65%{clip:rect(57px,9999px,94px,0)}70%{clip:rect(78px,9999px,85px,0)}75%{clip:rect(97px,9999px,48px,0)}80%{clip:rect(8px,9999px,31px,0)}85%{clip:rect(14px,9999px,17px,0)}90%{clip:rect(92px,9999px,92px,0)}95%{clip:rect(95px,9999px,63px,0)}100%{clip:rect(49px,9999px,11px,0)}}@keyframes noise-anim-2{0%{clip:rect(50px,9999px,32px,0)}5%{clip:rect(32px,9999px,76px,0)}10%{clip:rect(28px,9999px,55px,0)}15%{clip:rect(64px,9999px,11px,0)}20%{clip:rect(23px,9999px,53px,0)}25%{clip:rect(69px,9999px,48px,0)}30%{clip:rect(84px,9999px,66px,0)}35%{clip:rect(66px,9999px,70px,0)}40%{clip:rect(21px,9999px,86px,0)}45%{clip:rect(70px,9999px,85px,0)}50%{clip:rect(40px,9999px,4px,0)}55%{clip:rect(62px,9999px,47px,0)}60%{clip:rect(17px,9999px,97px,0)}65%{clip:rect(57px,9999px,94px,0)}70%{clip:rect(78px,9999px,85px,0)}75%{clip:rect(97px,9999px,48px,0)}80%{clip:rect(8px,9999px,31px,0)}85%{clip:rect(14px,9999px,17px,0)}90%{clip:rect(92px,9999px,92px,0)}95%{clip:rect(95px,9999px,63px,0)}100%{clip:rect(49px,9999px,11px,0)}}
+.error:before{content:attr(data-text);position:absolute;left:-2px;text-shadow:1px 0 #4e73df;top:0;color:#5a5c69;background:#f8f9fc;overflow:hidden;clip:rect(0,900px,0,0);animation:noise-anim-2 3s infinite linear alternate-reverse}
